--- a/Project.toml
+++ b/Project.toml
@@ -4,8 +4,11 @@ authors = ["Cody McCarthy <cmccarth@mtu.edu>"]
 version = "0.0.1"
 
 [deps]
+BufferedStreams = "e1450e63-4bb3-523b-b2a4-4ffa8c0fd77d"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
+HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 MatrixMarket = "4d4711f2-db25-561a-b6b3-d35e7d4047d3"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
