--- a/Project.toml
+++ b/Project.toml
@@ -1,14 +1,4 @@
 name = "SuiteMarketGet"
-uuid = "6e5d64a5-a931-58ad-bb9b-88fe234b5541"
-authors = ["Cody McCarthy <cmccarth@mtu.edu>"]
-version = "0.0.1"
-
-[deps]
-BufferedStreams = "e1450e63-4bb3-523b-b2a4-4ffa8c0fd77d"
-CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
-HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
-HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
-SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
-
-[compat]
-julia = "1.10"
+uuid = "7173aebf-f1ad-4c42-a712-8ab7c6c5167c"
+authors = ["CHLOzzz <chloemccarthyemail@gmail.com>"]
+version = "0.1.0"
